--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ cattrs==1.1.2
 certifi==2020.11.8
 cffi==1.14.4
 chardet==3.0.4
-click==8.1.3
+click>=5.1,<=8.1.3
 colorama==0.4.4
 colorlog==4.0.2
 commonmark==0.9.1
